Creating branches for multiple CI tools

--- a/.github/workflows/docker-build-scan-push.yml
+++ b/.github/workflows/docker-build-scan-push.yml
@@ -3,7 +3,7 @@ name: Docker Build/Scan/Push
 on:
   push:
     branches:
-      - main
+      - github-actions
   schedule:
     - cron: "0 7 * * 4"
 
