--- a/.github/workflows/docker-build-scan.yml
+++ b/.github/workflows/docker-build-scan.yml
@@ -3,7 +3,7 @@ name: Docker Build/Scan
 on:
   pull_request:
     branches:
-      - main
+      - github-actions
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
